<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="look_at_my_gui">Look at my GUI</string>
    <string name="click_here">Click Here</string>
    <string name="check_this_out">Check this out!</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="type_here">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_messasge">The switch is now</string>
    <string name="message_on">on</string>
    <string name="message_off">off</string>
    <string name="undo">Undo</string>
    <string name="type_email_here">Type email here</string>
    <string name="enter_your_email_addr">Enter your email address</string>
    <string name="type_your_pass">Type your password</string>
    <string name="shared_preference_email">email</string>
    <string name="login">LOGIN</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_button_above_to_take_pic">Click the button above to take a picture</string>
    <string name="delete_confirm_msg">Do you want to delete this?</string>
    <string name="the_selected_row_is">The selected row is:</string>
    <string name="the_database_id_is">The database id is:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="go_to_weather_forecast">Go to weather forecast</string>
    <string name="current_temp">Current Temperature:</string>
    <string name="min_temp_caption">Min temperature:</string>
    <string name="max_temp_caption">Max temperature:</string>
    <string name="uv_rating_caption">UV Rating:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="message_here">Message Here</string>
    <string name="id_equals">ID=</string>
    <string name="is_a_send_msg">Is a Send Message</string>
    <string name="hide">Hide</string>
    <string name="go_to_toolbar_page">Go to Toolbar page</string>
    <string name="you_clicked_on_the_overflow_menu">You clicked on the overflow menu</string>
    <string name="you_clicked_on_item_1">You clicked on item 1</string>
    <string name="you_clicked_on_item_2">You clicked on item 2</string>
    <string name="you_clicked_on_item_3">You clicked on item 3</string>
    <string name="chat_page">Chat page</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
