<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_picture" />

    <ImageButton
        android:id="@+id/take_picture_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_button_above_to_take_pic" />

    <Button
        android:id="@+id/go_to_chat_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_chat" />

    <Button
        android:id="@+id/go_to_weather_forecast_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_weather_forecast" />

    <Button
        android:id="@+id/go_to_toolbar_page_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_toolbar_page" />

</LinearLayout>