<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Button
            android:id="@+id/hide_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/hide" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_content_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/message_here"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/id_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_equals" />

            <CheckBox
                android:id="@+id/is_send_msg_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_a_send_msg" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>