<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherForecastActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weather_img_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="26dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/max_temp_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp_caption"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="27dp" />

                <TextView
                    android:id="@+id/max_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19"
                    tools:layout_editor_absoluteX="344dp"
                    tools:layout_editor_absoluteY="27dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/min_temp_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp_caption"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="27dp" />

                <TextView
                    android:id="@+id/min_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19"
                    tools:layout_editor_absoluteX="344dp"
                    tools:layout_editor_absoluteY="27dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_temp_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_temp"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="27dp" />

                <TextView
                    android:id="@+id/current_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19"
                    tools:layout_editor_absoluteX="344dp"
                    tools:layout_editor_absoluteY="27dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uv_rating_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uv_rating_caption"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="27dp" />

                <TextView
                    android:id="@+id/uv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19"
                    tools:layout_editor_absoluteX="344dp"
                    tools:layout_editor_absoluteY="27dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>